C51-62: Fix case view sticky panel z-index and glicth issue fix

--- a/scss/components/_case-body.scss
+++ b/scss/components/_case-body.scss
@@ -8,6 +8,14 @@
 
 .civicase__case-body_tab {
   z-index: 1;
+
+  &.affix {
+    z-index: 11;
+
+    + .tab-content {
+      padding-top: 50px;
+    }
+  }
 }
 
 .civicase__case-details-panel--summary {
